Convert payloads to individual sub-modules. Add intellij run configurations. Increase byepervisor timeout before sleep.